--- a/web/geolocation.html
+++ b/web/geolocation.html
@@ -3,6 +3,7 @@
 <head>
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <style>
         /* Always set the map height explicitly to define the size of the div
@@ -45,8 +46,9 @@
                 };
                 console.log(pos.lat);
                 console.log(pos.lng);
-                // $('#latitude').html(pos.lat);
-                // $('#longitude').html(pos.lng);
+
+                $('#latitude').text(pos.lat);
+                $('#longitude').text(pos.lng);
                 infoWindow.setPosition(pos);
                 infoWindow.setContent('Location found.');
                 infoWindow.open(map);
