--- a/web/orderHistory.html
+++ b/web/orderHistory.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <title>History</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <!--<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>-->
+
+
     <link rel="stylesheet" href="css/accounts.css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
 
 </head>
 <body>
@@ -35,40 +43,153 @@
         <!--end userTab  -->
 
     </div>
-    </div>
 </nav>
 
 <script>
     $(function () {
         var name = $.cookie('username');
-        if(name)
-        {
-            $('#userBtn').text(name);
-        }
-        else
-        {
-            window.location.href = "/login";
-        }
+        $('#userBtn').text(name);
     })
 </script>
 
 <!--display history-->
-<div style="width:700px;padding:20px;">
-    <h5 style="text-align:center"><i style="color:#ccc"><small>Order History</small></i></h5>
+<div style="width:80%;padding:20px; margin-right:auto; margin-left:auto;">
+    <h3 style="text-align:center"><i style="color: deepskyblue"><small>My Order History</small></i></h3>
+    <br />
+    <!--<table id="history_table" class="table">-->
+        <!--<thead>-->
+        <!--<col width="16%">-->
+        <!--<col width="12%">-->
+        <!--<col width="27%">-->
+        <!--<col width="16%">-->
+        <!--<col width="8%">-->
+        <!--<col width="13%">-->
+        <!--<col width="8%">-->
+        <!--<tr>-->
+            <!--<th>Date</th>-->
+            <!--<th>Bill code</th>-->
+            <!--<th>Delivery Address</th>-->
+            <!--<th>Gas brand</th>-->
+            <!--<th>Size</th>-->
+            <!--<th>Price</th>-->
+            <!--<th>Status</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
 
-    <table id="orderHistory" class="table">
+        <!--<tbody>-->
+        <!--<tr>-->
+            <!--<td>20/03/2018</td>-->
+            <!--<td>1002343</td>-->
+            <!--<td>254 Bach Mai</td>-->
+            <!--<td>petrolimex</td>-->
+            <!--<td>M</td>-->
+            <!--<td>300000</td>-->
+            <!--<td>S</td>-->
+        <!--</tr>-->
+
+        <!--</tbody>-->
+
+    <!--</table>-->
+
+<div>
+    <table id="example" class="table table-striped table-bordered row-border hover" style="width:100%">
+    <!--<table id="example" class="display cell-border" style="width:100%">-->
+        <thead>
         <tr>
-            <th>Date</th>
-            <th>Bill code</th>
-            <th>Delivery Address</th>
-            <th>Gas brand</th>
-            <th>Size</th>
-            <th>Price</th>
-            <th>Status</th>
+            <th>Name</th>
+            <th>Position</th>
+            <th>Office</th>
+            <th>Extn.</th>
+            <th>Start date</th>
+            <th>Salary</th>
         </tr>
+        </thead>
+        <tfoot>
+        <tr>
+            <th>Name</th>
+            <th>Position</th>
+            <th>Office</th>
+            <th>Extn.</th>
+            <th>Start date</th>
+            <th>Salary</th>
+        </tr>
+        </tfoot>
     </table>
 </div>
 
+</div>
+
+
+<script type="text/javascript">
+
+    $(document).ready(function() {
+        var t = $('#example').DataTable( {
+            // "processing": true,
+            // "serverSide": true,
+            // "ajax": {
+            //     "url": "https://datatables.net/examples/server_side/scripts/post.php",
+            //     "type": "POST"
+            // },
+            // "columns": [
+            //     { "data": "first_name" },
+            //     { "data": "last_name" },
+            //     { "data": "position" },
+            //     { "data": "office" },
+            //     { "data": "start_date" },
+            //     { "data": "salary" }
+            // ],
+
+            "ajax":
+                {
+                    "url" : "https://datatables.net/examples/ajax/data/objects.txt",
+                    "type" : "POST"
+                },
+            "columns": [
+                { "data": "name" },
+                { "data": "position" },
+                { "data": "office" },
+                { "data": "extn" },
+                { "data": "start_date" },
+                { "data": "salary" }
+            ],
+            // columnDefs: [ {
+            //     targets: [ 0 ],
+            //     orderData: [ 0, 1 ]
+            // }, {
+            //     targets: [ 1 ],
+            //     orderData: [ 1, 0 ]
+            // }, {
+            //     targets: [ 4 ],
+            //     orderData: [ 4, 0 ]
+            // } ],
+
+            // "columnDefs": [ {
+            //     "searchable": false,
+            //     "orderable": false,
+            //     "targets": 0
+            // } ],
+            // "order": [[ 1, 'asc' ]],
+
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
+
+            "initComplete": function () {
+                var api = this.api();
+                api.$('td').click( function () {
+                    api.search( this.innerHTML ).draw();
+                } );
+            }
+
+        } );
+
+        t.on( 'order.dt search.dt', function () {
+            t.column(0, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+                cell.innerHTML = i+1;
+            } );
+        } ).draw();
+
+    } );
+
+</script>
 
 
 </body>
