--- a/web/orderHistory.html
+++ b/web/orderHistory.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>History</title>
-
+    <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
@@ -34,7 +37,7 @@
             <div class="dropdown" style="float: right;margin-top: 8px;">
                 <button id="userBtn" class="btn btn-primary dropdown-toggle" style="width: 160px;" type="button" data-toggle="dropdown"><span class="caret"></span></button>
                 <ul class="dropdown-menu">
-                    <li><a href="/myAccount">My account</a></li>
+                    <li><a href="/profile">My account</a></li>
                     <li><a href="/orderHistory">My order history</a></li>
                     <li><a href="/logout">Log out</a></li>
                 </ul>
@@ -56,62 +59,33 @@
 <div style="width:80%;padding:20px; margin-right:auto; margin-left:auto;">
     <h3 style="text-align:center"><i style="color: deepskyblue"><small>My Order History</small></i></h3>
     <br />
-    <!--<table id="history_table" class="table">-->
-        <!--<thead>-->
-        <!--<col width="16%">-->
-        <!--<col width="12%">-->
-        <!--<col width="27%">-->
-        <!--<col width="16%">-->
-        <!--<col width="8%">-->
-        <!--<col width="13%">-->
-        <!--<col width="8%">-->
-        <!--<tr>-->
-            <!--<th>Date</th>-->
-            <!--<th>Bill code</th>-->
-            <!--<th>Delivery Address</th>-->
-            <!--<th>Gas brand</th>-->
-            <!--<th>Size</th>-->
-            <!--<th>Price</th>-->
-            <!--<th>Status</th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-
-        <!--<tbody>-->
-        <!--<tr>-->
-            <!--<td>20/03/2018</td>-->
-            <!--<td>1002343</td>-->
-            <!--<td>254 Bach Mai</td>-->
-            <!--<td>petrolimex</td>-->
-            <!--<td>M</td>-->
-            <!--<td>300000</td>-->
-            <!--<td>S</td>-->
-        <!--</tr>-->
-
-        <!--</tbody>-->
-
-    <!--</table>-->
 
 <div>
     <table id="example" class="table table-striped table-bordered row-border hover" style="width:100%">
     <!--<table id="example" class="display cell-border" style="width:100%">-->
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th>Extn.</th>
-            <th>Start date</th>
-            <th>Salary</th>
+            <th style="width: 4%;"></th>
+            <th style="width: 16%">Date</th>
+            <th style="width: 10%">Bill Code</th>
+            <th style="width: 27%">Delivery Address</th>
+            <th style="width: 16%">Gas Brand</th>
+            <th style="width: 6%">Size</th>
+            <th style="width: 13%">Price (VND)</th>
+            <th style="width: 8%">Status</th>
         </tr>
         </thead>
+
         <tfoot>
         <tr>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th>Extn.</th>
-            <th>Start date</th>
-            <th>Salary</th>
+            <th></th>
+            <th>Date</th>
+            <th>Bill Code</th>
+            <th>Delivery Address</th>
+            <th>Gas Brand</th>
+            <th>Size</th>
+            <th>Price</th>
+            <th>Status</th>
         </tr>
         </tfoot>
     </table>
@@ -122,53 +96,34 @@
 
 <script type="text/javascript">
 
+
+
     $(document).ready(function() {
         var t = $('#example').DataTable( {
             // "processing": true,
             // "serverSide": true,
-            // "ajax": {
-            //     "url": "https://datatables.net/examples/server_side/scripts/post.php",
-            //     "type": "POST"
-            // },
-            // "columns": [
-            //     { "data": "first_name" },
-            //     { "data": "last_name" },
-            //     { "data": "position" },
-            //     { "data": "office" },
-            //     { "data": "start_date" },
-            //     { "data": "salary" }
-            // ],
 
-            "ajax":
-                {
-                    "url" : "https://datatables.net/examples/ajax/data/objects.txt",
-                    "type" : "POST"
-                },
+            "ajax": {
+                "url": "/orderHistory",
+                "type": "POST"
+            },
             "columns": [
-                { "data": "name" },
-                { "data": "position" },
-                { "data": "office" },
-                { "data": "extn" },
-                { "data": "start_date" },
-                { "data": "salary" }
+                {"defaultContent": ""},
+                { "data": "date" },
+                { "data": "billCode" },
+                { "data": "address" },
+                { "data": "brand" },
+                { "data": "size" },
+                { "data": "price" },
+                { "data": "status"}
             ],
-            // columnDefs: [ {
-            //     targets: [ 0 ],
-            //     orderData: [ 0, 1 ]
-            // }, {
-            //     targets: [ 1 ],
-            //     orderData: [ 1, 0 ]
-            // }, {
-            //     targets: [ 4 ],
-            //     orderData: [ 4, 0 ]
-            // } ],
 
-            // "columnDefs": [ {
-            //     "searchable": false,
-            //     "orderable": false,
-            //     "targets": 0
-            // } ],
-            // "order": [[ 1, 'asc' ]],
+            "columnDefs": [ {
+                "searchable": false,
+                "orderable": false,
+                "targets": 0
+            } ],
+            "order": [[ 1, 'asc' ]],
 
             "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
 
