--- a/web/profile.html
+++ b/web/profile.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Order Form</title>
+    <title>My Profile</title>
     <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
     <link rel="stylesheet" href="css/home.css">
 
@@ -9,7 +9,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <!--<script src="js/popper.min.js"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
@@ -17,7 +16,6 @@
 </head>
 
 <body>
-
 
 <nav class="navbar navbar-inverse">
     <div class="container">
@@ -29,7 +27,7 @@
             dropdown" style="float: right;margin-top: 8px;">
                 <button id="userBtn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="width: 160px;"><span class="caret"></span></button>
                 <ul class="dropdown-menu">
-                    <li><a href="/profile">My account</a></li>
+                    <li><a href="/myAccount">My account</a></li>
                     <li><a href="/orderHistory">My order history</a></li>
                     <li><a href="/logout">Log out</a></li>
                 </ul>
@@ -63,11 +61,16 @@
     })
 
 </script>
+<br /><br /><br />
 
-<br><br><br>
+<div>
+    <p>Name: </p><br />
+    <p>Phone Number: </p>
+    <p>Email: </p>
+    <p>Point: </p>
+    <p href="/changePassword">Change password</p>
 
-<h2>Thank you. Our honor to serve you.</h2>
-<h3>We'll call you to confirm the delivery address once again.</h3>
+</div>
 
 </body>
 </html>
