--- a/web/signup.html
+++ b/web/signup.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Sign Up</title>
-
+    <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
     <link rel="stylesheet" href="css/accounts.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
