--- a/web/login.html
+++ b/web/login.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Login</title>
-
+    <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
     <link rel="stylesheet" href="css/accounts.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 
 <div class="container" style="margin-top:40px">
     <div class="row">
-        <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <div class="col-sm-offset-3 col-sm-6 col-md-4 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <strong> Sign in to continue</strong>
@@ -38,7 +38,6 @@
                             <!--<div class="row">-->
                                     <!--<img class="profile-img"-->
                                          <!--src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">-->
-
                             <!--</div>-->
                             <div class="row">
                                 <div class="col-sm-12 col-md-10  col-md-offset-1 ">
