--- a/web/orderForm.html
+++ b/web/orderForm.html
@@ -1,38 +1,74 @@
 <html>
 <head>
     <title>Order Form</title>
-
+    <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
     <link rel="stylesheet" href="css/home.css">
 
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <!--<script src="js/popper.min.js"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+
     <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+
+
+<nav class="navbar navbar-inverse">
     <div class="container">
         <a class="navbar-brand" href="/">Gas Order</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mainMenu">
-            <form class="form-inline ml-auto">
-                <a href="/login" class="btn btn-outline-secondary">Log in</a>
-                <a href="/signup" class="btn btn-primary ml-2">Sign up</a>
-            </form>
+
+        <!--userTab-->
+        <div class="container" id="userTab">
+            <div class="
+            dropdown" style="float: right;margin-top: 8px;">
+                <button id="userBtn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="width: 160px;"><span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                    <li><a href="/myAccount">My account</a></li>
+                    <li><a href="/orderHistory">My order history</a></li>
+                    <li><a href="/logout">Log out</a></li>
+                </ul>
+            </div>
         </div>
+        <!--end userTab  -->
+
+        <!--login & sign up-->
+        <div id="logSign" class="form-inline ml-auto" style="float: right;margin-top: 8px;">
+            <a href="/login" class="btn btn-outline-secondary" style="color: white;">Sign in</a>
+            <a href="/signup" class="btn btn-primary ml-2">Sign up</a>
+        </div>
+        <!--end logSign-->
+    </div>
     </div>
 </nav>
+
+<script type="text/javascript">
+    $(function () {
+        var name = $.cookie('username');
+        if(name)
+        {
+            $('#userBtn').text(name);
+            $('#logSign').hide();
+            $('#userTab').show();
+        }
+        else {
+            $('#logSign').show();
+            $('#userTab').hide();
+        }
+    })
+
+</script>
+
 <br><br><br>
 <div class="container">
     <div class="row">
         <div class="span8">
-            <form action="/order" method="post" class="form-horizontal" id="billingform" accept-charset="utf-8">
+            <form action="/orderForm" method="post" class="form-horizontal" id="billingform" accept-charset="utf-8">
 
                 <div class="control-group">
                     <label for="phoneNumber" class="control-label">
@@ -74,7 +110,7 @@
                         Ward
                     </label>
                     <div class="controls">
-                        <%--<input name="ward" type="text" value="" id="ward">--%>
+                        <!--<input name="ward" type="text" value="" id="ward">-->
                         <select name="ward" id="ward">
                             <option value=""></option>
                             <option value="BHT_BM">Bach Mai</option>
@@ -87,14 +123,24 @@
                     </div>
                 </div>
 
+                <br>
+                <div class="control-group">
+                    <label class="control-label" for="humancheck">Humanity Check:</label>
+                    <div class="controls">
+                        <label class="radio inline" for="humancheck-0">
+                            <input type="radio" name="humancheck" id="humancheck-0" value="robot" checked="checked">I'm a Robot (not be able to order)</label>
+                        <label class="radio inline" for="humancheck-1">
+                            <input type="radio" name="humancheck" id="humancheck-1" value="human">I'm Human</label>
+                    </div>
+                </div>
+
                 <div class="form-actions">
                     <button type="submit" class="btn btn-large btn-primary">Order now</button>
                 </div>
             </form>
-        </div> <!-- .span8 -->
+        </div>
     </div>
 </div>
-
 
 </body>
 </html>
