--- a/web/orderForm.html
+++ b/web/orderForm.html
@@ -9,7 +9,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <!--<script src="js/popper.min.js"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
@@ -62,6 +61,43 @@
         }
     })
 
+    function sendOrder() {
+
+        //get inputs
+
+        var order = new Object();
+
+        order.gasCode = $('#gasCode').val();
+        order.phoneNumber = $('#phoneNumber').val();
+        order.address = $('#address').val();
+        order.ward = $('#ward').val();
+        // order.district = $('#district').val();
+
+        $.ajax(
+            {
+                url : '/orderForm',
+                type : 'POST',
+                dataType: 'json',
+                data: JSON.stringify(order),
+                contentType: 'application/json',
+                success: function (message) {
+                    if(message.status == 0)
+                    {
+                        window.location.href = message.url;
+                    }
+                    else
+                    {
+                        alert("Invalid input !!!")
+                    }
+                },
+                error: function () {
+                    alert("The connection was interupted.")
+                }
+
+            }
+        );
+    }
+
 </script>
 
 <br><br><br>
@@ -69,6 +105,20 @@
     <div class="row">
         <div class="span8">
             <form action="/orderForm" method="post" class="form-horizontal" id="billingform" accept-charset="utf-8">
+
+                <div class="control-group">
+                    <label for="ward" class="control-label">
+                        Gas cylinder:
+                    </label>
+                    <div class="controls">
+                        <!--<input name="ward" type="text" value="" id="ward">-->
+                        <select name="gasCode" id="gasCode">
+                            <option value=100000>12 Kg Petrolimex Cylinder (325.000 VND)</option>
+                            <option value=100100>2 Kg Petrolimex Cylinder (70.000VND)</option>
+                            <option value="100200">48 Kg Petrolimex Cylinder (1.150.000 VND)</option>
+                        </select>
+                    </div>
+                </div>
 
                 <div class="control-group">
                     <label for="phoneNumber" class="control-label">
@@ -88,22 +138,22 @@
                     </div>
                 </div>
 
-                <div class="control-group">
-                    <label for="district" class="control-label">
-                        District
-                    </label>
-                    <div class="controls">
-                        <select name="district" id="district">
-                            <option value=""></option>
-                            <option value="HBT">Hai Ba Trung</option>
-                            <option value="DD">Dong Da</option>
-                            <option value="BD">Ba Dinh</option>
-                            <option value="HK">Hoan Kiem</option>
-                            <span class="help-inline"> Default: Set address to be your current position.</span>
-                        </select>
+                <!--<div class="control-group">-->
+                    <!--<label for="district" class="control-label">-->
+                        <!--District-->
+                    <!--</label>-->
+                    <!--<div class="controls">-->
+                        <!--<select name="district" id="district">-->
+                            <!--<option value=""></option>-->
+                            <!--<option value="HBT">Hai Ba Trung</option>-->
+                            <!--<option value="DD">Dong Da</option>-->
+                            <!--<option value="BD">Ba Dinh</option>-->
+                            <!--<option value="HK">Hoan Kiem</option>-->
+                            <!--<span class="help-inline"> Default: Set address to be your current position.</span>-->
+                        <!--</select>-->
 
-                    </div>
-                </div>
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div class="control-group">
                     <label for="ward" class="control-label">
@@ -135,7 +185,7 @@
                 </div>
 
                 <div class="form-actions">
-                    <button type="submit" class="btn btn-large btn-primary">Order now</button>
+                    <button type="button" class="btn btn-large btn-primary" onclick="sendOrder()">Order now</button>
                 </div>
             </form>
         </div>
