--- a/web/orderForm.html
+++ b/web/orderForm.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Order Form</title>
     <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
@@ -28,7 +29,7 @@
             dropdown" style="float: right;margin-top: 8px;">
                 <button id="userBtn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="width: 160px;"><span class="caret"></span></button>
                 <ul class="dropdown-menu">
-                    <li><a href="/myAccount">My account</a></li>
+                    <li><a href="/profile">My account</a></li>
                     <li><a href="/orderHistory">My order history</a></li>
                     <li><a href="/logout">Log out</a></li>
                 </ul>
@@ -42,7 +43,6 @@
             <a href="/signup" class="btn btn-primary ml-2">Sign up</a>
         </div>
         <!--end logSign-->
-    </div>
     </div>
 </nav>
 
@@ -59,7 +59,7 @@
             $('#logSign').show();
             $('#userTab').hide();
         }
-    })
+    });
 
     function sendOrder() {
 
@@ -70,7 +70,7 @@
         order.gasCode = $('#gasCode').val();
         order.phoneNumber = $('#phoneNumber').val();
         order.address = $('#address').val();
-        order.ward = $('#ward').val();
+        order.regionCode = $('#ward').val();
         // order.district = $('#district').val();
 
         $.ajax(
@@ -107,7 +107,7 @@
             <form action="/orderForm" method="post" class="form-horizontal" id="billingform" accept-charset="utf-8">
 
                 <div class="control-group">
-                    <label for="ward" class="control-label">
+                    <label for="gasCode" class="control-label">
                         Gas cylinder:
                     </label>
                     <div class="controls">
