--- a/web/orderForm.html
+++ b/web/orderForm.html
@@ -117,17 +117,17 @@
 
                 <br>
                 <div class="control-group">
-                    <label class="control-label">Humanity Check:</label>
+                    <label class="control-label" >Humanity Check:</label>
                     <div class="controls">
-                        <label class="radio inline" for="humancheck-0">
-                            <input type="radio" name="humancheck" id="humancheck-0" value="robot" checked="checked">I'm a Robot (not be able to order)</label>
-                        <label class="radio inline" for="humancheck-1">
-                            <input type="radio" name="humancheck" id="humancheck-1" value="human">I'm Human</label>
+                        <label class="radio inline">
+                            <input type="radio" name="humancheck" id="humancheck-0" checked="checked">I'm a Robot (not be able to order)</label>
+                        <label class="radio inline">
+                            <input type="radio" name="humancheck" id="humancheck-1" >I'm Human</label>
                     </div>
                 </div>
 
                 <div class="form-actions">
-                    <button type="button" class="btn btn-large btn-primary" onclick="sendOrder(order, street)">Order now</button>
+                    <button id="btn" type="button" class="btn btn-large btn-primary" onclick="sendOrder()">Order now</button>
                 </div>
             </form>
         </div>
@@ -190,6 +190,7 @@
                 map.setCenter(pos);
                 map.setZoom(16.5);
                 marker.setPosition(pos);
+                marker.setAnimation(google.maps.Animation.BOUNCE);
 
                 reverserGeoCoding(pos);
 
@@ -209,6 +210,7 @@
         var autocomplete = new google.maps.places.Autocomplete(input);
 
         autocomplete.addListener('place_changed', function() {
+            marker.setAnimation(null);
             infowindow.close();
             marker.setVisible(false);
             var place = autocomplete.getPlace();
@@ -252,6 +254,7 @@
     }
 
     function addPin(event) {                // properties for click are returned in event
+        marker.setAnimation(null);
         infowindow.close();
         marker.setVisible(false);
         marker.setPosition(event.latLng);
@@ -268,26 +271,40 @@
                 if(location){
                     window.street = "";
                     var details = "";
-                    if(location.address_components[0].types[0] == 'street_number')
-                    {
-                        details = details + location.address_components[0].short_name;
+
+                    route: {
+                        if(location.address_components[0].types[0] == 'street_number')
+                        {
+                            details = details + location.address_components[0].short_name;
+                        }
+                        else
+                        {
+                            if(location.address_components[0].types[0] == 'route')
+                            {
+                                window.street = location.address_components[0].short_name;
+                                break route;
+                            }
+                        }
+
+                        if(location.address_components[1].types[0] == 'route') {
+                            window.street = location.address_components[1].short_name;
+                        }
+
                     }
-                    if(location.address_components[0].types[0] == 'route')
-                    {
-                        window.street += location.address_components[0].short_name;
-                    }
-                    if(location.address_components[1].types[0] == 'route')
-                    {
-                        window.street += location.address_components[1].short_name;
-                    }
+
+
                     if(location.address_components[1].types[0] == 'political')
                     {
                         window.order.ward = location.address_components[1].short_name;
                     }
-                    if(location.address_components[2].types[0] == 'political')
+                    else
                     {
-                        window.order.ward = location.address_components[2].short_name;
+                        if(location.address_components[2].types[0] == 'political' || location.address_components[2].types[0] == 'administrative_area_level_3')
+                        {
+                            window.order.ward = location.address_components[2].short_name;
+                        }
                     }
+
 
                     $('#details').val(details);
                     $('#street').val(window.street + ", " + window.order.ward);
@@ -317,11 +334,41 @@
         infoWindow.open(map);
     }
 
-    function sendOrder() {
 
+
+    $(document).ready(function () {
+        $('#btn').prop('disabled', true);
+        $('#humancheck-1').click(function () {
+            if($('#phoneNumber').val() != '' && $('#street').val() != ''){
+                $('#btn').prop('disabled', false);
+            }
+        });
+        $('#humancheck-0').click(function () {
+            $('#btn').prop('disabled', true);
+        });
+
+        $('#phoneNumber, #street, #humancheck-1').keyup(function(){
+            if($('#phoneNumber').val() != '' && $('#street').val() != '' && $('#humancheck-1').is(':checked'))
+            {
+                $('#btn').prop('disabled', false);
+            }
+            else {
+                $('#btn').prop('disabled', true);
+            }
+        });
+    });
+
+    function sendOrder() {
+        marker.setAnimation(null);
         window.order.gasCode = $('#gasCode').val();
         window.order.phoneNumber = $('#phoneNumber').val();
-        window.order.address = $('#details').val() + ", " + window.street;
+        if($('#details').val() != '')
+        {
+            window.order.address = $('#details').val() + ", " + window.street;
+        }
+        else {
+            window.order.address = window.street;
+        }
 
         $.ajax(
             {
